RESOLVED FIXED270814
WebKit Web Extensions: chrome.action is undefined if the action key in the manifest is missing or empty
https://bugs.webkit.org/show_bug.cgi?id=270814
Summary WebKit Web Extensions: chrome.action is undefined if the action key in the ma...
Elijah Sawyers
Reported 2024-03-11 13:29:58 PDT
Attachments
Elijah Sawyers
Comment 1 2024-03-11 19:41:50 PDT
EWS
Comment 2 2024-03-12 11:54:20 PDT
Committed 275991@main (e880d73dbb4d): <https://commits.webkit.org/275991@main> Reviewed commits have been landed. Closing PR #25755 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.