chrome.action is undefined if the action key in the manifest is missing or empty https://bugs.webkit.org/show_bug.cgi?id=270814 rdar://122330191

Reviewed by Timothy Hatcher.

All keys in the dictionary in the manifest for action, browser_action, and
page_action should be optional. This patch makes the necessary changes for
that to be true.

* Source/WebKit/UIProcess/Extensions/Cocoa/WebExtensionCocoa.mm:
(WebKit::WebExtension::hasAction):
(WebKit::WebExtension::hasBrowserAction):
(WebKit::WebExtension::hasPageAction):
(WebKit::WebExtension::populateActionPropertiesIfNeeded):
* Source/WebKit/WebProcess/Extensions/API/Cocoa/WebExtensionAPINamespaceCocoa.mm:
(WebKit::WebExtensionAPINamespace::isPropertyAllowed):

Canonical link: https://commits.webkit.org/275991@main